# holochain-liquid-components

./: .gitignore  Overview.drawio  README.md
.github/workflows/: test.yaml
component_hub/: Cargo.toml  package-lock.json  package.json
component_hub/dnas/component_hub/workdir/: dna.yaml
component_hub/dnas/component_hub/zomes/coordinator/registry/: Cargo.toml
component_hub/dnas/component_hub/zomes/coordinator/registry/src/: all_coordinator_components.rs  coordinator_component.rs  lib.rs  search_components.rs
component_hub/dnas/component_hub/zomes/integrity/registry_integrity/: Cargo.toml
component_hub/dnas/component_hub/zomes/integrity/registry_integrity/src/: coordinator_component.rs  lib.rs
component_hub/tests/src/liquid_component_registry/liquid_components/: all-coordinator-components.test.ts  common.ts  coordinator-component.test.ts
component_hub/ui/src/: App.vue
component_hub/ui/src/liquid_component_registry/liquid_components/: AllCoordinatorComponents.vue  CoordinatorComponentDetail.vue  CreateCoordinatorComponent.vue  EditCoordinatorComponent.vue  types.ts
component_hub/workdir/: happ.yaml  web-happ.yaml
components/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
components/lib/: ComponentHubSearch.vue  ComponentRenderer.vue  LiquidComponentBasin.vue  index.js
example_components/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
example_happs/forum/: package-lock.json  package.json
example_happs/forum/ui/src/: App.vue  main.ts
example_happs/forum/workdir/: happ.yaml
(+9 files in other folders)
