[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"

[workspace.dependencies.registry]
path = "dnas/component_hub/zomes/coordinator/registry"

[workspace.dependencies.registry_integrity]
path = "dnas/component_hub/zomes/integrity/registry_integrity"
